# python-for-data-science

./: .gitignore
array/ex00/: give_bmi.py
array/ex01/: array2D.py  tester.py
array/ex02/: load_image.py
array/ex03/: load_image.py  test.py  zoom.py
array/ex04/: load_image.py  rotate.py
array/ex05/: load_image.py  pimp_image.py
dataTable/ex00/: load_csv.py
dataTable/ex01/: aff_life.py
dataTable/ex02/: aff_pop.py
dataTable/ex03/: load_csv.py  projection_life.py
dod/ex00/: statistics.py
dod/ex01/: in_out.py
dod/ex02/: callLimit.py
dod/ex03/: new_student.py  tester.py
ex00/: Hello.py
ex02/: find_ft_type.py
ex03/: NULL_not_found.py
ex04/: whatis.py
ex05/: building.py
ex06/: filterstring.py
ex08/: Loading.py  tester.py
ex09/ft_package/: pyproject.toml  setup.py
ex09/ft_package/src/ft_package.egg-info/: PKG-INFO  SOURCES.txt
oop/ex00/: S1E9.py  tester.py
oop/ex01/: tester.py
oop/ex02/: DiamondTrap.py  S1E7.py  test.py
oop/ex03/: ft_calculator.py
oop/ex04/: ft_calculator.py
starting/ex01/: format_ft_time.py
starting/ex02/: find_ft_type.py
starting/ex03/: NULL_not_found.py
starting/ex06/: ft_filter.py
starting/ex07/: sos.py
starting/ex08/: Loading.py
starting/ex09/ft_package/: pyproject.toml
starting/ex09/ft_package/src/ft_package/: count_in_list.py
